--- a/.github/workflows/main_mcgwebappsfmigprod.yml
+++ b/.github/workflows/main_mcgwebappsfmigprod.yml
@@ -23,13 +23,13 @@ jobs:
 
 
       - name: Maven Install Api
-        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/api.jar -DgroupId=local -DartifactId=sf-api-wsc -Dversion=1.0 -Dpackaging=jar
+        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/api.jar -DgroupId="local" -DartifactId="sf-api-wsc" -Dversion=1.0 -Dpackaging=jar
       
       - name: Maven Install Partner Api
-        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/partner.jar -DgroupId=local -DartifactId=sf-api -Dversion=1.0 -Dpackaging=jar
+        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/partner.jar -DgroupId="local" -DartifactId="sf-api" -Dversion=1.0 -Dpackaging=jar
            
       - name: Maven Install Open CSV
-        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/opencsv.jar -DgroupId=local -DartifactId=open-csv -Dversion=1.0 -Dpackaging=jar
+        run: mvn install:install-file -Dfile=D:/a/datasyncProd/datasyncProd/lib/opencsv.jar -DgroupId="local" -DartifactId="open-csv" -Dversion=1.0 -Dpackaging=jar
 
       - name: Build with Maven
         run: mvn clean install
