--- a/.github/workflows/main_mcgwebappsfmigprod.yml
+++ b/.github/workflows/main_mcgwebappsfmigprod.yml
@@ -42,6 +42,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
