--- a/.github/workflows/main_mcgwebappsfmigprod.yml
+++ b/.github/workflows/main_mcgwebappsfmigprod.yml
@@ -32,7 +32,7 @@ jobs:
         run: mvn install:install-file -Dfile="D:/a/datasyncProd/datasyncProd/lib/opencsv.jar" -DgroupId="local" -DartifactId="open-csv" -Dversion="1.0" -Dpackaging="jar"
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean compile assembly:single
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
