--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>DataSyncMvn</artifactId>
+    <artifactId>DataSync</artifactId>
     <version>1.0-SNAPSHOT</version>
 	
 
@@ -15,77 +15,41 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 	
-	<!--build>
-  <plugins>
-	<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-install-plugin</artifactId>
-    <version>2.5.2</version>
-    <executions>
-        <execution>
-            <id>1</id>
-            <phase>clean</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-                <groupId>com.local.jar</groupId> 
-                <artifactId>sf-api</artifactId>
-                <version>1.0</version>
-                <packaging>jar</packaging>
-                <file>${project.basedir}/lib/partner.jar</file>
-            </configuration>
-        </execution>
-        <execution>
-            <id>2</id>
-            <phase>clean</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-                <groupId>com.local.jar</groupId>
-                <artifactId>open-csv</artifactId>
-                <version>1.0</version>
-                <packaging>jar</packaging>
-                <file>${project.basedir}/lib/opencsv.jar</file>
-            </configuration>
-        </execution>
-		        <execution>
-            <id>3</id>
-            <phase>clean</phase>
-            <goals>
-                <goal>install-file</goal>
-            </goals>
-            <configuration>
-                <groupId>com.local.jar</groupId>
-                <artifactId>sf-api-wsc</artifactId>
-                <version>1.0</version>
-                <packaging>jar</packaging>
-                <file>${project.basedir}/api/api.jar</file>
-            </configuration>
-        </execution>
-	</executions>
-	</plugin>
-	  </plugins>
-</build-->
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.main.DataSync</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	
 	<dependencies>
-	<dependency>
-		<groupId>local</groupId>
-		<artifactId>sf-api</artifactId>
-		<version>1.0</version>
-	</dependency>
+		<dependency>
+			<groupId>local</groupId>
+			<artifactId>sf-api</artifactId>
+			<version>1.0</version>
+		</dependency>
 
-	<dependency>
-		<groupId>local</groupId>
-		<artifactId>open-csv</artifactId>
-		<version>1.0</version>
-	</dependency>
+		<dependency>
+			<groupId>local</groupId>
+			<artifactId>open-csv</artifactId>
+			<version>1.0</version>
+		</dependency>
 	
-	<dependency>
-		<groupId>local</groupId>
-		<artifactId>sf-api-wsc</artifactId>
-		<version>1.0</version>
-	</dependency>
+		<dependency>
+			<groupId>local</groupId>
+			<artifactId>sf-api-wsc</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
